points add api
